# docs/swagger.json
@@ -1451,7 +1451,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/service.ListUserResult"
+                            "$ref": "#/definitions/user.ListUserResponse"
                         }
                     },
                     "400": {
@@ -1487,7 +1487,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/service.CreateUserParam"
+                            "$ref": "#/definitions/user.CreateUserRequest"
                         }
                     }
                 ],
@@ -1495,7 +1495,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.User"
+                            "$ref": "#/definitions/user.UserDto"
                         }
                     },
                     "400": {
@@ -1533,7 +1533,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/service.CreateUserSessionParam"
+                            "$ref": "#/definitions/user.CreateUserSessionRequest"
                         }
                     }
                 ],
@@ -1541,7 +1541,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/service.CreateSessionResult"
+                            "$ref": "#/definitions/user.CreateSessionResponse"
                         }
                     },
                     "400": {
@@ -1625,7 +1625,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.User"
+                            "$ref": "#/definitions/user.UserDto"
                         }
                     },
                     "400": {
@@ -1668,7 +1668,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/service.UpdateUserParam"
+                            "$ref": "#/definitions/user.UpdateUserRequest"
                         }
                     }
                 ],
@@ -1676,7 +1676,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.User"
+                            "$ref": "#/definitions/user.UserDto"
                         }
                     },
                     "400": {
@@ -2107,39 +2107,6 @@
                 }
             }
         },
-        "dto.User": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "description": "用户名",
-                    "type": "string"
-                },
-                "scopes": {
-                    "description": "用户权限",
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "status": {
-                    "description": "用户状态",
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/enum.UserStatus"
-                        }
-                    ]
-                },
-                "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
         "enum.EndpointType": {
             "type": "string",
             "enum": [
@@ -2171,17 +2138,6 @@
                 "RouteStatusInactive"
             ]
         },
-        "enum.UserStatus": {
-            "type": "string",
-            "enum": [
-                "active",
-                "inactive"
-            ],
-            "x-enum-varnames": [
-                "UserStatusActive",
-                "UserStatusInactive"
-            ]
-        },
         "httpserver.HttpError": {
             "type": "object",
             "properties": {
@@ -2211,7 +2167,6 @@
             "type": "object",
             "required": [
                 "attribute",
-                "description",
                 "name",
                 "type"
             ],
@@ -2389,72 +2344,6 @@
                             "$ref": "#/definitions/enum.RoutePathType"
                         }
                     ]
-                },
-                "status": {
-                    "description": "路由状态",
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/enum.RouteStatus"
-                        }
-                    ]
-                }
-            }
-        },
-        "service.CreateSessionResult": {
-            "type": "object",
-            "properties": {
-                "expire_at": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "scopes": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "token": {
-                    "type": "string"
-                },
-                "type": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "service.CreateUserParam": {
-            "type": "object",
-            "properties": {
-                "name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "scopes": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
-            }
-        },
-        "service.CreateUserSessionParam": {
-            "type": "object",
-            "required": [
-                "name",
-                "password"
-            ],
-            "properties": {
-                "name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
                 }
             }
         },
@@ -2545,25 +2434,10 @@
                 }
             }
         },
-        "service.ListUserResult": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/dto.User"
-                    }
-                },
-                "total": {
-                    "type": "integer"
-                }
-            }
-        },
         "service.UpdateAuthorizeParam": {
             "type": "object",
             "required": [
                 "attribute",
-                "description",
                 "id",
                 "name",
                 "type"
@@ -2768,7 +2642,79 @@
                 }
             }
         },
-        "service.UpdateUserParam": {
+        "user.CreateSessionResponse": {
+            "type": "object",
+            "properties": {
+                "expire_at": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "scopes": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "token": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.CreateUserRequest": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "scopes": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "user.CreateUserSessionRequest": {
+            "type": "object",
+            "required": [
+                "name",
+                "password"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.ListUserResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/user.UserDto"
+                    }
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "user.UpdateUserRequest": {
             "type": "object",
             "required": [
                 "id"
@@ -2790,6 +2736,50 @@
                     }
                 }
             }
+        },
+        "user.UserDto": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "description": "用户名",
+                    "type": "string"
+                },
+                "scopes": {
+                    "description": "用户权限",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "status": {
+                    "description": "用户状态",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/user.UserStatus"
+                        }
+                    ]
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.UserStatus": {
+            "type": "string",
+            "enum": [
+                "active",
+                "inactive"
+            ],
+            "x-enum-varnames": [
+                "UserStatusActive",
+                "UserStatusInactive"
+            ]
         },
         "value.AuthorizeAttribute": {
             "type": "object",
